@@ -1,5 +1,4 @@
-set JAVA_HOME=c:\Program Files\Java\jdk-15\
+set JAVA_HOME=c:\Program Files\Java\jdk-16\
 call mvn clean install
-set JAVA_HOME=c:\Program Files\Java\jdk-15\
-rem call mvn exec:java -Dexec.mainClass="com.example.utils.MakeExamples" -Dexec.args="from-mvn" -D--enable-preview
+set JAVA_HOME=c:\Program Files\Java\jdk-16\
 "%JAVA_HOME%\bin\java.exe" --enable-preview -classpath target\classes com.example.utils.MakeExamples from-mvn
